Improve helper powershell scripts